--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,6 @@
-/* Global Styles */
-body,
-html {
-  scroll-behavior: smooth;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
+/* Grundläggande styling */
+body {
+  font-family: "Grandstander", cursive;
   background: linear-gradient(
     135deg,
     #111,
@@ -30,519 +24,118 @@ html {
   }
 }
 
-/* Welcome Section */
-#Welcome {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#background-video {
-  opacity: 0.1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  width: 100vh;
-  height: 100vh;
-  object-fit: cover;
-}
-
-/* Main Container */
-.main {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.main__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  z-index: 1;
-  color: white;
-}
-
-.main__content h1 {
-  font-size: 3rem;
-  color: white;
-  margin-bottom: 20px;
-}
-
-/* Icons */
-.icons__container {
-  display: flex;
-  gap: 15px;
-  margin-bottom: 20px;
-  justify-content: center;
-}
-
-.github-icon,
-.linkedin-icon {
-  font-size: 2rem;
-  cursor: pointer;
-  transition: transform 0.3s;
-  text-decoration: none;
-}
-
-.github-icon {
-  color: purple;
-  text-decoration: none;
-}
-
-.linkedin-icon {
-  color: blue;
-}
-
-.github-icon:hover,
-.linkedin-icon:hover {
-  transform: scale(1.2);
-}
-
-/* Button */
-.button--function {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button--function button {
-  font-size: 20px;
-  min-width: 120px;
-  cursor: pointer;
-  background-color: black;
-  color: white;
-  border: 2px solid white;
-  border-radius: 25px;
-  transition: background-color 0.5s, transform 0.3s;
-  padding: 10px 20px;
-}
-
-.button--function button:hover {
-  background-color: white;
-  color: black;
-  transform: scale(1.1);
-}
-
-/* Fade Effect Overlay */
-#fade-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 1s ease-in-out;
-}
-
-#fade-overlay.fade-in {
-  opacity: 1;
-  visibility: visible;
-}
-/*NAVBAR*/
+/* Navbar */
 .navbar {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  z-index: 1000;
-}
-.no-underline {
-  text-decoration: none;
 }
 
-.nav-container {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  padding: 10px 15px;
-  justify-content: space-between;
-  text-decoration: none;
-}
-
-.nav-content {
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 20px;
-}
-
-.contact,
-.project {
-  font-size: 1.2rem;
-  color: white;
-  cursor: pointer;
-  transition: transform 0.3s, color 0.3s;
-}
-
-.contact:hover,
-.project:hover {
-  transform: scale(1.1);
-  color: #068fff;
-}
-
-/*HOME PAGE*/
-
-.container {
-  width: 100%;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.hero-flex {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
-
-#profile-pic {
-  width: 300px;
-  height: 600px;
-  object-fit: cover;
-}
-
-/*TEXT SECTION*/
-.hello-flex {
-  display: block;
-  unicode-bidi: isolate;
-  padding-top: 80px;
-  top: 80%;
-}
-
-.heading-2,
-.heading-3 {
-  margin-left: -0.09em;
-  display: inline-block;
-}
-
-.heading-2 {
-  color: #eeeeee;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: Heebo, sans-serif;
-  font-size: 5.21em;
-  font-weight: 700;
-  line-height: 1.4;
-}
-
-.my-name {
-  display: flex;
-  unicode-bidi: isolate;
-  gap: 10px;
-}
-
-.heading-3 {
-  color: #eeeeee;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: Heebo, sans-serif;
-  font-size: 5.21em;
-  font-weight: 700;
-  line-height: 1.4;
-}
-.heading-4 {
-  background-image: linear-gradient(97deg, #4e4feb, #068fff 50%, #eeeeee);
-  -webkit-background-clip: text;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: Heebo, sans-serif;
-  font-size: 5.21em;
-  font-weight: 700;
-  line-height: 1.4;
-  background-clip: text; /* For modern browsers */
-  color: transparent;
-}
-
-.paragraph {
-  text-align: left;
-  margin-top: -1.03em;
-  font-size: 1.3em;
-  font-weight: 500;
-  color: #eeeeee;
-}
-.paragraph-2 {
-  text-align: left;
-  color: #eeeeee;
-  max-width: 26.8em;
-  margin-top: 1.04em;
-}
-.paragraph p {
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  unicode-bidi: isolate;
-}
-
-.paragraph-2 strong {
+.navbar-brand {
   font-weight: bold;
 }
-.hero-icons {
-  position: relative;
-  width: 100%; /* Anpassa bredd */
-  height: 300px; /* Anpassa höjd */
-  overflow: hidden; /* Förhindrar ikoner från att flyga ut */
+.navbar-toggler-icon {
+  color: #007bff;
 }
 
-.hero-icons i {
-  position: absolute;
-  font-size: 50px; /* Justera ikonstorlek */
-  opacity: 0.8;
-  animation: floatAround 5s infinite alternate ease-in-out;
+.nav-link {
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  transition: color 0.3s;
+}
+.nav-link:hover {
+  color: white;
 }
 
-/* Unika positioner och hastigheter för varje ikon */
-.js-icon {
-  top: 40%;
-  left: 20%;
-  animation-duration: 4s;
-  color: yellow;
+/* Hero section */
+.hero {
+  color: white;
+  text-align: center;
 }
 
-.php-icon {
-  top: 30%;
-  left: 40%;
-  animation-duration: 6s;
-  color: #4e4feb;
+.hero h1 span {
+  color: #ffc107;
 }
 
-.html5-icon {
-  top: 50%;
-  color: red;
-  left: 80%;
-  animation-duration: 5s;
+#profilePhoto {
+  max-width: 250px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-.sass-icon {
-  color: #b94eeb;
-  top: 70%;
-  left: 40%;
-  animation-duration: 7s;
+/* Ikoner i hero-sektionen */
+.hero .fa-brands {
+  color: white;
+  transition: transform 0.3s ease-in-out;
 }
 
-.css-icon {
-  color: #068fff;
-  top: 50%;
-  left: 60%;
-  animation-duration: 4.5s;
+.hero .fa-brands:hover {
+  transform: scale(1.2);
+  color: #002aaa;
 }
 
-/* Keyframe-animation för flytande rörelse */
-@keyframes floatAround {
-  0% {
-    transform: translate(0, 0);
-  }
-  25% {
-    transform: translate(20px, -10px) rotate(10deg);
-  }
-  50% {
-    transform: translate(-15px, 15px) rotate(-10deg);
-  }
-  75% {
-    transform: translate(10px, -20px) rotate(15deg);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
+/*About Me Section*/
+#aboutME {
+  padding-top: 100px;
 }
 
-/*MY IMAGE*/
-
-.hero-image {
-  margin-right: 5.56em;
-  display: block;
-  unicode-bidi: isolate;
-}
-
-.image-1 {
-  max-width: 100%;
-  height: auto;
-  position: absolute;
-  top: 50%;
-
-  right: 8.56em;
-  transform: translateY(-50%);
-}
-
-/*PROJECT SECTION*/
-
-.project-container {
-  width: 100%;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 5em;
-  margin-top: 70px;
-}
-
-.projectwrapper {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 70vh;
-  display: flex;
-}
-
-.heading-5 {
-  color: #001f7c;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: Heebo, sans-serif;
-  font-size: 5.21em;
-  font-weight: 700;
-  line-height: 1.4;
-}
-
-.paragraph-3 {
-  color: #eeeeee;
-  max-width: 26.8em;
-  margin-top: 0;
-  font-size: 1.2rem;
-}
-
-.paragraph-4 {
-  background-image: linear-gradient(97deg, #111, #068fff 50%, #474747);
-  -webkit-background-clip: text;
-  background-clip: text;
-  margin-top: -0.03em;
-  color: transparent;
-  font-size: 1.8rem;
-}
-
-.timeline {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  padding: 40px 20px;
-  position: relative;
-  margin: 50px auto;
-  width: 80%;
-  height: 150vh;
-}
-
-.timeline-bar {
-  width: 4px;
-  height: 100%;
-  background-color: #ccc;
-  position: absolute;
-  left: 50%;
-  top: 0;
-  bottom: 0;
-  transform: translateX(-50%);
-}
-
-.timeline-item {
-  background-color: transparent;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+/*Project Section*/
+.card {
+  background-color: #222;
   padding: 20px;
-  width: 100%;
-  margin-bottom: 90px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  opacity: 0; 
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
-.timeline-item.visible {
+.card h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 1rem;
+  margin-bottom: 15px;
+}
+
+.card .btn {
+  margin-right: 10px;
+}
+
+.card.show {
   opacity: 1;
   transform: translateY(0);
 }
 
-/* Content area: Left-aligned text */
-.timeline-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 45%;
-  text-align: left;
-  top: 50vh;
+/* Scroll animation */
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
-.heading-6 {
-  font-size: 1.8em;
-  margin-top: 10px;
-  color: #001f7c;
-  font-weight: 700;
-}
 
-.paragraph-5 {
-  color: #eeeeee;
-  max-width: 100%;
+/* Contact section */
+#contact .btn {
   font-size: 1.2rem;
-}
-
-/* Buttons */
-.button-project button {
-  padding: 6px 20px;
-  background-color: transparent;
-  color: white;
-  border: 2px solid white;
-  border-radius: 15px;
-  cursor: pointer;
-  transition: background 0.5s ease, transform 0.3s;
-}
-
-.button-project button:hover {
-  background: linear-gradient(97deg, #4e4feb, #068fff 50%, #4d4c4c);
-  transform: scale(1.1);
-}
-/*IMAGES-PROJECTS*/
-.project-image img {
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-}
-
-/*CONTACT SECTION*/
-.contact-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  top: 50vh;
-  height: 100vh;
-}
-
-.reachout-workolder {
-  display: flex;
-}
-
-.heading-7 {
-  font-size: 2rem;
-  color: #ffffff;
-}
-
-.paragraph-6 {
-  font-size: 1.5rem;
-  color: #068fff;
-}
-
-.paragraph-7 {
-  font-size: 1.2rem;
-  color: #111;
-  font-weight: 700;
-}
-
-.button-contact button {
   padding: 10px 20px;
-  font-size: 1rem;
-  background-color: white;
-  color: #000530;
-  border: 2px solid white;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: color 0.5s ease, transform 0.3s;
 }
 
-.button-contact button:hover {
-  transform: scale(1.1);
-  color: #001f7c;
+#contact .fa-brands {
+  color: #007bff;
+  transition: color 0.3s;
 }
-/*ADD MEDIA */
+
+#contact .fa-brands:hover {
+  color: #6610f2;
+}
+
+/* Footer */
+#footer {
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+}
