--- a/styles.css
+++ b/styles.css
@@ -71,8 +71,15 @@ body {
 }
 
 /*About Me Section*/
-#aboutME {
-  padding-top: 100px;
+
+
+#aboutMe {
+  margin-bottom: 250px; /* Increases space below the About Me section */
+}
+
+#project {
+  margin-top: 50px; 
+  margin-bottom: 250px;
 }
 
 /*Project Section*/
@@ -81,7 +88,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-  opacity: 0; 
+  opacity: 0;
   transform: translateY(50px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
@@ -117,25 +124,21 @@ body {
   }
 }
 
-
 /* Contact section */
-#contact .btn {
-  font-size: 1.2rem;
-  padding: 10px 20px;
-}
-
-#contact .fa-brands {
-  color: #007bff;
-  transition: color 0.3s;
-}
-
-#contact .fa-brands:hover {
-  color: #6610f2;
-}
-
-/* Footer */
-#footer {
-  color: white;
+#contact h1, p {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  padding: 20px 0;
+  
+}
+#contact-form {
+  width: 25rem; 
+  margin: 0 auto; 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
 }
