--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,7 @@ body {
 }
 
 /* Navbar */
-.navbar {
-}
+
 
 .navbar-brand {
   font-weight: bold;
@@ -47,7 +46,6 @@ body {
 /* Hero section */
 .hero {
   color: white;
-  text-align: center;
 }
 
 .hero h1 span {
@@ -125,7 +123,7 @@ body {
 }
 
 /* Contact section */
-#contact h1, p {
+#contact  {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
